<resources>
    <string name="app_name">Digicu</string>
    <string name="app_title">Digicu</string>
    <string name="app_description">모아봐요 디지털 쿠폰!</string>
    <string name="signin_signup_find">회원가입/비밀번호 찾기</string>
    <string name="digicu_email">이메일</string>
    <string name="digicu_auth">본인인증</string>
    <string name="digicu_pw">비밀번호</string>
    <string name="digicu_login">로그인</string>
    <string name="digicu_remember_info">로그인 정보 저장</string>
    <string name="digicu_simple_pass">간편 로그인 비밀번호 변경</string>
    <string name="receipt">영수증</string>
    <string name="date">날짜 : </string>
    <string name="price">총 금액 : </string>
    <string name="product_price">금액</string>
    <string name="product_name">상품명</string>
    <string name="product_count">수량</string>
    <string name="product_one_price">단가</string>

    <string name="search_shop">가게 이름을 입력</string>

    <string name="shopname_or_couponname">가게명 혹은 쿠폰이름</string>

    <string name="honorific_title">님</string>
    <string name="plz_use_safety_account">안전한 계정 이용을 위해 본인인증 정보를 등록해주세요!</string>

    <string name="bottom_menu_title1">Home</string>
    <string name="bottom_menu_title2">Trade</string>
    <string name="bottom_menu_title2_kr">쿠폰 거래</string>
    <string name="bottom_menu_title3">Search</string>
    <string name="bottom_menu_title3_kr">가게 검색</string>
    <string name="bottom_menu_title4">Coupon</string>
    <string name="bottom_menu_title5">Menu</string>
    <string name="bottom_menu_title5_kr">메뉴</string>

    <string name="coupon_name">쿠폰명</string>
    <string name="coupon_type">쿠폰 종류</string>
    <string name="coupon_value">쿠폰 가치</string>
    <string name="coupon_saving_count">적립 도장 수</string>
    <string name="coupon_creation_date">생성일</string>
    <string name="coupon_expiration_date">만료일</string>
    <string name="coupon_list">적립중인 쿠폰 목록</string>
    <string name="coupon_info">쿠폰 정보</string>
    <string name="coupon_tab_log">적립기록</string>
    <string name="coupon_tab_item">쿠폰함</string>
    <string name="coupon_add_msg">쿠폰을 추가해 봐요!</string>
    <string name="coupon_state">쿠폰 상태</string>

    <string name="publish_coupon">쿠폰 발급</string>
    <string name="trade_coupon">쿠폰 거래 등록</string>

    <string name="coupon_state_available">사용가능</string>
    <string name="coupon_state_trading">거래중</string>
    <string name="coupon_state_used">사용완료</string>
    <string name="coupon_state_expiration">유효기간 만료</string>
    <string name="trade_notification">거래 요청</string>

    <string name="coupon_trade_sell_req">교환 등록 쿠폰</string>
    <string name="coupon_trade_buy_req">교환 요청 쿠폰</string>

    <string name="trade_permit">교환 하기</string>
    <string name="trade_request">교환 요청</string>
    <string name="trade_cancel">등록 취소</string>
    <string name="trade_request_cancel">교환 요청 취소</string>
    <string name="trade_table">쿠폰 교환</string>
    <string name="choose_trade_coupon">교환할 쿠폰 선택</string>
    <string name="choose_trade_coupon_v2">교환할 쿠폰을 선택 하세요!</string>
    <string name="there_is_not_coupon">교환할 수 있는 쿠폰이 없습니다!</string>
    <string name="back">뒤로</string>

    <string name="show_qrcode_to_the_publisher">발급된 QR을 직원에게 보여주세요!</string>

    <string name="shop_info">가게 정보</string>
    <string name="shop_name">상호명</string>
    <string name="shop_owner">대표</string>
    <string name="shop_phone">연락처</string>
    <string name="shop_address">주소</string>
    <string name="shop_homepage">홈페이지</string>

    <string name="signup">회원가입</string>
    <string name="do_signup">가입하기</string>

    <string name="loading">로딩중입니다...</string>

    <string name="purchase_shop_name">가게명</string>
    <string name="purchase_price">결제금액</string>
    <string name="purchase_date">결제일</string>

    <string name="payment_log">결제 기록</string>

    <string name="insufficient">도장개수가 모자랍니다.</string>

    <string name="notificationServicePerm">Digicu 알림 서비스를 이용하시겠습니까?</string>
    <string name="tradeCancelPerm">정말 교한 등록된 쿠폰을 취소하시겠습니까?</string>

    <string name="digicu_channel_id">12451245</string>
    <string name="digicu_channel_name">digicu_channel</string>
    <string name="digicu_channel_description">Digicu Application 전용 FCM 채널입니다.</string>
    <string name="digicu_notification_perm">알림서비스</string>
    <string name="server_client_id">547207036785-pl6vbj6vkbh12se1frq5pn371djq66dj.apps.googleusercontent.com</string>
    <string name="digicu_preference_file_name">com.example.digicu_customer</string>
    <string name="digicu_token">digicu_token</string>

</resources>
