<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:icon="@drawable/ic_baseline_star_24"
        android:enabled="true"
        android:title="@string/bottom_menu_title1"/>
    <item
        android:id="@+id/page_2"
        android:icon="@drawable/ic_baseline_storefront_24"
        android:enabled="true"
        android:title="@string/bottom_menu_title2"/>
    <item
        android:id="@+id/page_3"
        android:icon="@drawable/ic_baseline_card_giftcard_24"
        android:enabled="true"
        android:title="@string/bottom_menu_title4"/>
    <item
        android:id="@+id/page_4"
        android:icon="@drawable/ic_baseline_search_24"
        android:enabled="true"
        android:title="@string/bottom_menu_title3"/>
    <item
        android:id="@+id/page_5"
        android:icon="@drawable/ic_baseline_menu_24"
        android:enabled="true"
        android:title="@string/bottom_menu_title5"/>
</menu>