<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/digicu_gray_color"
    tools:context=".ui.main.home.couponinfo.receipt.ReceiptFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/digicu_home_add_coupon"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/receipt"
                android:textStyle="bold"
                android:textColor="@color/digicu_black_color"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:text="@string/date"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/receipt_date"
                    android:textStyle="bold"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="5dp"
                android:text="적립도장 2개"
                android:textStyle="bold"
                android:id="@+id/receipt_mileage"
                android:textColor="@color/digicu_black_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:text="구매내역"
                android:textStyle="bold"
                android:textColor="@color/digicu_black_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="5dp"
                android:background="@color/digicu_black_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/product_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/product_one_price"
                    android:gravity="right"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/product_count"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/product_price"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:gravity="right"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/receipt_products_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <View
                android:layout_marginTop="5dp"
                android:background="@color/digicu_black_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/price"
                    android:textStyle="bold"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/receipt_price"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>