<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/coupon_info_coupon_card"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/shop_logo_img"
            android:padding="10dp"
            android:src="@drawable/nologo"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_marginTop="5dp"
        android:background="@color/digicu_dark_gray_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:padding="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/shop_name"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="right"
                    android:id="@+id/coupon_info_shop_name"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/shop_owner"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="right"
                    android:id="@+id/coupon_info_shop_owner"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/shop_phone"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="right"
                    android:id="@+id/coupon_info_shop_phone"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/shop_address"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="right"
                    android:id="@+id/coupon_info_shop_address"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/shop_homepage"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="right"
                    android:autoLink="web"
                    android:textColorLink="@color/digicu_base_primary_color"
                    android:id="@+id/coupon_info_shop_homepage"
                    android:textColor="@color/digicu_black_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginBottom="5dp"
            android:background="@color/digicu_dark_gray_color"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coupon_kind_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>