<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_card_view"
                android:layout_width="50dp"
                android:layout_height="50dp">
                <ImageView
                    android:id="@+id/profile_user_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_toRightOf="@id/profile_card_view"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:text="정지승"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/honorific_title"
                android:textSize="16dp"
                android:layout_alignTop="@id/profile_user_name"
                android:layout_toRightOf="@id/profile_user_name"
                android:layout_marginLeft="5dp"
                android:textColor="@color/digicu_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/profile_sub_title"
                android:layout_toRightOf="@id/profile_card_view"
                android:layout_below="@id/profile_user_name"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp"
                android:textSize="11dp"
                android:text="@string/plz_use_safety_account"
                android:textColor="@color/digicu_dark_gray_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/digicu_dark_gray_color"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <TextView
            android:text="계정정보"
            android:textSize="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                android:textColor="@color/digicu_black_color"
                android:text="@string/digicu_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/user_info_email"
                android:textSize="15dp"
                android:textColor="@color/digicu_black_color"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                android:textColor="@color/digicu_black_color"
                android:text="@string/digicu_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/user_info_auth"
                android:textSize="15dp"
                android:text="본인인증 해주세요(클릭)"
                android:clickable="true"
                android:textColor="@color/digicu_dark_gray_color"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/digicu_dark_gray_color"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <TextView
            android:text="계정 보안"
            android:textSize="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15dp"
                android:textColor="@color/digicu_black_color"
                android:text="@string/digicu_simple_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/user_info_change_pass"
                android:textSize="15dp"
                android:text="비밀번호 설정해주세요(클릭)"
                android:clickable="true"
                android:textColor="@color/digicu_dark_gray_color"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>